--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
-p {
-    color: blue;
+* {
+    box-sizing: border-box;
+    border: 1px solid black;
+  }
+
+body {
+    margin: 0; padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+  
