feat: add header container

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-* {
-    box-sizing: border-box;
-    border: 1px solid black;
+html {
+    scroll-behavior: smooth; 
   }
 
 body {
@@ -9,4 +8,22 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    list-style: none;
+  }
   
+.nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    text-decoration: none;
+    transition: .3s;
+  }
